# ceres

./: .gitignore  LICENSE  README.md  mkdocs.yml  plan.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  real-world-validation.yml
ceres/: cli.py  config.py  gitdiff.py  runner.py
ceres/analyzers/: base.py
ceres/analyzers/agent/: tool_poisoning.py
ceres/analyzers/bom/: aibom.py  cyclonedx.py
ceres/analyzers/code/: config_yaml.py  python_ast.py
ceres/analyzers/data/: drift.py  fingerprint.py  manifest.py
ceres/analyzers/eval/: safety_config.py
ceres/analyzers/model/: gguf_static.py  onnx_static.py  pickle_static.py  safetensors_static.py  scanner.py
ceres/analyzers/prompt/: prompt_rules.py
ceres/analyzers/rag/: injection_patterns.py  text_extract.py
ceres/baseline/: __init__.py  store.py
ceres/findings/: __init__.py  model.py  severity.py  waivers.py
ceres/inventory/: __init__.py  classifier.py  walker.py
ceres/reporters/: cli.py  json_reporter.py  sarif.py
docs/: architecture.md  ci.md  coverage.md  getting-started.md  index.md  model-security.md  policy.md  real-world-validation.md  roadmap.md  rules.md
docs/assets/: ceres.css  structured-data.js
examples/: model-fixture-corpus.yml  real-world-corpus.yml
examples/clean-ai-repo/src/: load_model.py
examples/github-actions/: ai-security-gate.yml
examples/vulnerable-ai-repo/: requirements.txt
examples/vulnerable-ai-repo/config/: agent.yaml
examples/vulnerable-ai-repo/data/: dataset.yaml  train.csv
examples/vulnerable-ai-repo/models/: final.pkl
examples/vulnerable-ai-repo/prompts/: system.txt
examples/vulnerable-ai-repo/rag/: vendor_policy.md
scripts/: model_fixture_check.py  real_world_check.py
tests/: test_correctness_regressions.py  test_model_fixture_check.py  test_model_metadata_formats.py  test_model_real_fixtures_integration.py  test_model_tensors.py  test_real_world_check.py  test_smoke.py
(+1 files in other folders)
