[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ceres-scanner"
version = "0.1.0"
description = "Ceres: developer-first AI-SAST scanner for models, datasets, RAG docs, prompts, and AI supply chain."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "ceres contributors" }]
license = { text = "Apache-2.0" }
keywords = ["security", "sast", "ai", "ml", "llm", "rag", "scanner"]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.6",
    "PyYAML>=6.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
parquet = ["pyarrow>=14"]
dev = ["pytest>=8", "pyarrow>=14", "ruff>=0.8"]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5"]

[project.scripts]
ceres = "ceres.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["ceres"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
"scripts/real_world_check.py" = ["E402"]
